[gd_scene load_steps=5 format=3 uid="uid://ccynisiuyn5qn"]

[ext_resource type="Script" path="res://src/ui_parts/inspector.gd" id="1_16ggy"]
[ext_resource type="PackedScene" uid="uid://bktmk76u7dsu0" path="res://src/ui_parts/root_element_editor.tscn" id="2_jnl50"]
[ext_resource type="Texture2D" uid="uid://eif2ioi0mw17" path="res://visual/icons/Plus.svg" id="3_vo6hf"]
[ext_resource type="Script" path="res://src/ui_parts/move_to_overlay.gd" id="5_otlmf"]

[node name="Inspector" type="Container"]
custom_minimum_size = Vector2(408, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 460.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_16ggy")
border_width = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_left = 5
corner_radius_bottom_right = 5
title_margin = 4
panel_margin = 2

[node name="ActionContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddButton" type="Button" parent="ActionContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_constants/h_separation = 4
icon = ExtResource("3_vo6hf")

[node name="ElementContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(0, 240)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ElementContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 3

[node name="AllElements" type="VBoxContainer" parent="ElementContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="RootElementEditor" parent="ElementContainer/MarginContainer/AllElements" instance=ExtResource("2_jnl50")]
layout_mode = 2

[node name="RootChildren" type="VBoxContainer" parent="ElementContainer/MarginContainer/AllElements"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="MoveToOverlay" type="Control" parent="ElementContainer"]
visible = false
layout_mode = 2
script = ExtResource("5_otlmf")
